--- a/about.html
+++ b/about.html
@@ -268,11 +268,11 @@
 							</div>
 							<div class="game__overlay">
 								<div class="game__overlay-left">
-									<h4>free poker games</h4>
-									<p>Catagory: Roulette</p>
+									<h4>Juego de Poker Gratis</h4>
+									<p>Categoria: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
-									<a href="#" class="default-button"><span>play now<i class="icofont-circled-right"></i></span> </a>
+									<a href="#" class="default-button"><span>Juegue Ahora<i class="icofont-circled-right"></i></span> </a>
 								</div>
 							</div>
 						</div>
@@ -286,11 +286,11 @@
 							</div>
 							<div class="game__overlay">
 								<div class="game__overlay-left">
-									<h4>free poker games</h4>
-									<p>Catagory: Roulette</p>
+									<h4>Juego de Poker Gratis</h4>
+									<p>Categoria: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
-									<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 								</div>
 							</div>
 						</div>
@@ -304,11 +304,11 @@
 							</div>
 							<div class="game__overlay">
 								<div class="game__overlay-left">
-									<h4>free poker games</h4>
-									<p>Catagory: Roulette</p>
+									<h4>Juego de Poker Gratis</h4>
+									<p>Categoria: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
-									<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 								</div>
 							</div>
 						</div>
@@ -322,11 +322,11 @@
 							</div>
 							<div class="game__overlay">
 								<div class="game__overlay-left">
-									<h4>free poker games</h4>
-									<p>Catagory: Roulette</p>
+									<h4>Juego de Poker Gratis</h4>
+									<p>Categoria: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
-									<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 								</div>
 							</div>
 						</div>
@@ -334,7 +334,7 @@
                 </div>
             </div>
 			<div class="button-wrapper text-center mt-5">
-				<a href="game-list.html" class="default-button"><span>Browse All Matches <i class="icofont-circled-right"></i></span>
+				<a href="game-list.html" class="default-button"><span> Revisar todos los encuentros <i class="icofont-circled-right"></i></span>
 				</a>
 			</div>
         </div>
