--- a/index-2.html
+++ b/index-2.html
@@ -472,7 +472,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -486,7 +486,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -500,7 +500,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -528,7 +528,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -542,7 +542,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -556,7 +556,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -667,7 +667,7 @@
 									<p>Catagory: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
-									<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 								</div>
 							</div>
 						</div>
@@ -685,7 +685,7 @@
 									<p>Catagory: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
-									<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 								</div>
 							</div>
 						</div>
@@ -703,7 +703,7 @@
 									<p>Catagory: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
-									<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 								</div>
 							</div>
 						</div>
@@ -721,7 +721,7 @@
 									<p>Catagory: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
-									<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 								</div>
 							</div>
 						</div>
