--- a/index-3.html
+++ b/index-3.html
@@ -381,7 +381,7 @@
 									<p>Catagory: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
-									<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 								</div>
 							</div>
 						</div>
@@ -399,7 +399,7 @@
 									<p>Catagory: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
-									<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 								</div>
 							</div>
 						</div>
@@ -417,7 +417,7 @@
 									<p>Catagory: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
-									<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 								</div>
 							</div>
 						</div>
@@ -435,7 +435,7 @@
 									<p>Catagory: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
-									<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 								</div>
 							</div>
 						</div>
@@ -654,7 +654,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -668,7 +668,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -682,7 +682,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -696,7 +696,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -710,7 +710,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -724,7 +724,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
