--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -487,7 +487,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -501,7 +501,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -529,7 +529,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -543,7 +543,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -557,7 +557,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -668,7 +668,7 @@
 									<p>Catagory: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
-									<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 								</div>
 							</div>
 						</div>
@@ -686,7 +686,7 @@
 									<p>Catagory: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
-									<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 								</div>
 							</div>
 						</div>
@@ -704,7 +704,7 @@
 									<p>Catagory: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
-									<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 								</div>
 							</div>
 						</div>
@@ -722,7 +722,7 @@
 									<p>Catagory: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
-									<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 								</div>
 							</div>
 						</div>
