--- a/game-list.html
+++ b/game-list.html
@@ -210,7 +210,7 @@
                                 <div class="game__overlay">
                                     <h4>poker games</h4>
                                     <p>$1,23,002</p>
-                                    <a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+                                    <a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
                                 </div>
                             </div>
                         </div>
@@ -224,7 +224,7 @@
                                 <div class="game__overlay">
                                     <h4>poker games</h4>
                                     <p>$1,23,002</p>
-                                    <a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+                                    <a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
                                 </div>
                             </div>
                         </div>
@@ -238,7 +238,7 @@
                                 <div class="game__overlay">
                                     <h4>poker games</h4>
                                     <p>$1,23,002</p>
-                                    <a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+                                    <a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
                                 </div>
                             </div>
                         </div>
@@ -252,7 +252,7 @@
                                 <div class="game__overlay">
                                     <h4>poker games</h4>
                                     <p>$1,23,002</p>
-                                    <a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+                                    <a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
                                 </div>
                             </div>
                         </div>
@@ -266,7 +266,7 @@
                                 <div class="game__overlay">
                                     <h4>poker games</h4>
                                     <p>$1,23,002</p>
-                                    <a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+                                    <a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
                                 </div>
                             </div>
                         </div>
@@ -280,7 +280,7 @@
                                 <div class="game__overlay">
                                     <h4>poker games</h4>
                                     <p>$1,23,002</p>
-                                    <a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+                                    <a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
                                 </div>
                             </div>
                         </div>
@@ -294,7 +294,7 @@
                                 <div class="game__overlay">
                                     <h4>poker games</h4>
                                     <p>$1,23,002</p>
-                                    <a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+                                    <a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
                                 </div>
                             </div>
                         </div>
@@ -308,7 +308,7 @@
                                 <div class="game__overlay">
                                     <h4>poker games</h4>
                                     <p>$1,23,002</p>
-                                    <a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+                                    <a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
                                 </div>
                             </div>
                         </div>
@@ -322,7 +322,7 @@
                                 <div class="game__overlay">
                                     <h4>poker games</h4>
                                     <p>$1,23,002</p>
-                                    <a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+                                    <a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
                                 </div>
                             </div>
                         </div>
@@ -336,7 +336,7 @@
                                 <div class="game__overlay">
                                     <h4>poker games</h4>
                                     <p>$1,23,002</p>
-                                    <a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+                                    <a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
                                 </div>
                             </div>
                         </div>
@@ -350,7 +350,7 @@
                                 <div class="game__overlay">
                                     <h4>poker games</h4>
                                     <p>$1,23,002</p>
-                                    <a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+                                    <a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
                                 </div>
                             </div>
                         </div>
@@ -364,7 +364,7 @@
                                 <div class="game__overlay">
                                     <h4>poker games</h4>
                                     <p>$1,23,002</p>
-                                    <a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+                                    <a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
                                 </div>
                             </div>
                         </div>
@@ -378,7 +378,7 @@
                                 <div class="game__overlay">
                                     <h4>poker games</h4>
                                     <p>$1,23,002</p>
-                                    <a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+                                    <a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
                                 </div>
                             </div>
                         </div>
@@ -392,7 +392,7 @@
                                 <div class="game__overlay">
                                     <h4>poker games</h4>
                                     <p>$1,23,002</p>
-                                    <a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+                                    <a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
                                 </div>
                             </div>
                         </div>
@@ -406,7 +406,7 @@
                                 <div class="game__overlay">
                                     <h4>poker games</h4>
                                     <p>$1,23,002</p>
-                                    <a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+                                    <a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
                                 </div>
                             </div>
                         </div>
@@ -420,7 +420,7 @@
                                 <div class="game__overlay">
                                     <h4>poker games</h4>
                                     <p>$1,23,002</p>
-                                    <a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+                                    <a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
                                 </div>
                             </div>
                         </div>
