--- a/game-list2.html
+++ b/game-list2.html
@@ -217,7 +217,7 @@
 										<p>Catagory: Roulette</p>
 									</div>
 									<div class="game__overlay-right">
-										<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+										<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 									</div>
 								</div>
 							</div>
@@ -235,7 +235,7 @@
 										<p>Catagory: Roulette</p>
 									</div>
 									<div class="game__overlay-right">
-										<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+										<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 									</div>
 								</div>
 							</div>
@@ -253,7 +253,7 @@
 										<p>Catagory: Roulette</p>
 									</div>
 									<div class="game__overlay-right">
-										<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+										<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 									</div>
 								</div>
 							</div>
@@ -271,7 +271,7 @@
 										<p>Catagory: Roulette</p>
 									</div>
 									<div class="game__overlay-right">
-										<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+										<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 									</div>
 								</div>
 							</div>
@@ -289,7 +289,7 @@
 										<p>Catagory: Roulette</p>
 									</div>
 									<div class="game__overlay-right">
-										<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+										<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 									</div>
 								</div>
 							</div>
@@ -307,7 +307,7 @@
 										<p>Catagory: Roulette</p>
 									</div>
 									<div class="game__overlay-right">
-										<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+										<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 									</div>
 								</div>
 							</div>
@@ -325,7 +325,7 @@
 										<p>Catagory: Roulette</p>
 									</div>
 									<div class="game__overlay-right">
-										<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+										<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 									</div>
 								</div>
 							</div>
@@ -343,7 +343,7 @@
 										<p>Catagory: Roulette</p>
 									</div>
 									<div class="game__overlay-right">
-										<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+										<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 									</div>
 								</div>
 							</div>
@@ -361,7 +361,7 @@
 										<p>Catagory: Roulette</p>
 									</div>
 									<div class="game__overlay-right">
-										<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+										<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 									</div>
 								</div>
 							</div>
@@ -379,7 +379,7 @@
 										<p>Catagory: Roulette</p>
 									</div>
 									<div class="game__overlay-right">
-										<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+										<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 									</div>
 								</div>
 							</div>
