--- a/jaqpot.html
+++ b/jaqpot.html
@@ -390,7 +390,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -404,7 +404,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -418,7 +418,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -446,7 +446,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -460,7 +460,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
@@ -474,7 +474,7 @@
 													<div class="game__overlay">
 														<h4>poker games</h4>
 														<p>$1,23,002</p>
-														<a href="#" class="default-button"><span>play now <i class="icofont-circled-right"></i></span> </a>
+														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
 											</div>
