--- a/blog.html
+++ b/blog.html
@@ -366,7 +366,7 @@
 	<!-- ===========Fin de la sección de blog aquí========== -->
 
 	<!-- ================Inicio de la sección de pie de página =============== -->
-    <footer class="footer-section" style="background-image: url(assets/images/footer/bg.jpg);">
+    <footer class="footer-section" style="background-image: url(assets/images/footer/bg-1.jpg);">
         <div class="footer-top">
             <div class="container">
                 <div class="row g-3 justify-content-center g-lg-0">
