--- a/contact.html
+++ b/contact.html
@@ -294,7 +294,7 @@
 
 
 	<!-- ================Inicio de la sección de pie de página =============== -->
-    <footer class="footer-section" style="background-image: url(assets/images/footer/bg.jpg);">
+    <footer class="footer-section" style="background-image: url(assets/images/footer/bg-1.jpg);">
         <div class="footer-top">
             <div class="container">
                 <div class="row g-3 justify-content-center g-lg-0">
