--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
 
 
 	<!-- ================ La sección de pie de página comienza aquí =============== -->
-    <footer class="footer-section" style="background-image: url(assets/images/footer/bg.jpg);">
+    <footer class="footer-section" style="background-image: url(assets/images/footer/bg-1.jpg);">
         <div class="footer-top">
             <div class="container">
                 <div class="row g-3 justify-content-center g-lg-0">
