--- a/login.html
+++ b/login.html
@@ -238,7 +238,7 @@
 
 
 	<!-- ================ seccion de pie de pagina empieza aqui =============== -->
-    <footer class="footer-section" style="background-image: url(assets/images/footer/bg.jpg);">
+    <footer class="footer-section" style="background-image: url(assets/images/footer/bg-1.jpg);">
         <div class="footer-top">
             <div class="container">
                 <div class="row g-3 justify-content-center g-lg-0">
