--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
 									</li>
 
 									<li>
-										<a href="#0">Features</a>
+										<a href="#0">Funciones</a>
 										<ul class="submenu">
 											<li><a href="about.html" class="active">Nosotros</a></li>
 											<li><a href="jaqpot.html">Casino Jackpot</a></li>
@@ -142,7 +142,7 @@
 											<li><a href="blog-single.html">Blog Single</a></li>
 										</ul>
 									</li>
-									<li><a href="contact.html">Contactos</a></li>
+									<li><a href="contact.html">Contactanos</a></li>
 								</ul>
 								<a href="login.html" class="login"><i class="icofont-user"></i> <span>Iniciar Sesion</span> </a>
 								<a href="signup.html" class="signup"><i class="icofont-users"></i> <span>Registrarse</span></a>
@@ -168,7 +168,7 @@
 
 
 	<!-- ===========Inicio de la sección de encabezado de página========== -->
-	<section class="pageheader-section" style="background-image: url(assets/images/pageheader/bg.jpg);">
+	<section class="pageheader-section" style="background-image: url(assets/images/pageheader/pg-1.jpg);">
 		<div class="container">
             <div class="section-wrapper text-center text-uppercase">
                 <h2 class="pageheader-title">Acerca del casino</h2>
@@ -210,7 +210,7 @@
 								<ul class="about-list">
 									<li class="about-item d-flex flex-wrap">
 										<div class="about-item-thumb">
-											<img src="assets/images/about/icon-1.png" alt="Icon">
+											<img src="assets/images/about/mando.png" alt="Icon">
 										</div>
 										<div class="about-item-content">
 											<h5>103K mil en ganancias de la comunidad</h5>
@@ -219,7 +219,7 @@
 									</li>
 									<li class="about-item d-flex flex-wrap">
 										<div class="about-item-thumb">
-											<img src="assets/images/about/icon-2.png" alt="Icon">
+											<img src="assets/images/about/soporte.png" alt="Icon">
 										</div>
 										<div class="about-item-content">
 											<h5>Más de 34M de jugadores registrados</h5>
@@ -228,7 +228,7 @@
 									</li>
 									<li class="about-item d-flex flex-wrap">
 										<div class="about-item-thumb">
-											<img src="assets/images/about/icon-3.png" alt="Icon">
+											<img src="assets/images/about/mando.png" alt="Icon">
 										</div>
 										<div class="about-item-content">
 											<h5>Más de 240 mil transmisiones realizadas</h5>
@@ -247,7 +247,7 @@
 
 
 	<!-- ===========Inicio de la sección de juegos aquí========== -->
-    <div class="game-section padding-top padding-bottom overflow-hidden" style="background-image:url(assets/images/match/bg.jpg)">
+    <div class="game-section padding-top padding-bottom overflow-hidden" style="background-image:url(assets/images/match/pg1.jpg)">
         <div class="container">
 			<div class="section-header">
 				<h2>OTROS JUEGOS RELACIONADOS</h2>
@@ -493,7 +493,7 @@
                         <div class="footer-middle-item-wrapper">
                             <div class="footer-middle-item mb-lg-0">
                                 <div class="fm-item-title">
-                                    <h4>Top jackpot games</h4>
+                                    <h4>Juegos destacados de jackpot</h4>
                                 </div>
                                 <div class="fm-item-content">
                                     <div class="fm-item-widget lab-item">
@@ -502,8 +502,8 @@
                                                 <a href="#"> <img src="assets/images/footer/01.jpg" alt="footer-widget-img" class="rounded-3"></a>
                                             </div>
                                             <div class="lab-content">
-                                                <a href="blog-single.html"><h6>free Poker Game</h6></a>
-                                                <p>Poker: <b>$230</b></p>
+                                                <a href="blog-single.html"><h6>Juego de Poker Gratis</h6></a>
+                                                <p>Poker: <b>S/230.00</b></p>
 												<div class="rating">
 													<i class="icofont-ui-rating"></i>
 													<i class="icofont-ui-rating"></i>
@@ -520,8 +520,8 @@
                                                 <a href="#"><img src="assets/images/footer/02.jpg" alt="footer-widget-img" class="rounded-3"></a>
                                             </div>
                                             <div class="lab-content">
-                                                <a href="blog-single.html"><h6>CLUB Poker Game</h6></a>
-                                                <p>Poker: <b>$290</b></p>
+                                                <a href="blog-single.html"><h6>Partida de Póker del Club</h6></a>
+                                                <p>Poker: <b>S/290.00</b></p>
 												<div class="rating">
 													<i class="icofont-ui-rating"></i>
 													<i class="icofont-ui-rating"></i>
@@ -538,8 +538,8 @@
                                                 <a href="#"><img src="assets/images/footer/03.jpg" alt="footer-widget-img" class="rounded-3"></a>
                                             </div>
                                             <div class="lab-content">
-                                                <a href="blog-single.html"><h6>ROYAL Poker Game</h6></a>
-                                                <p>Poker: <b>$330</b></p>
+                                                <a href="blog-single.html"><h6>"Partida de Póker Real</h6></a>
+                                                <p>Poker: <b>S/330.00</b></p>
 												<div class="rating">
 													<i class="icofont-ui-rating"></i>
 													<i class="icofont-ui-rating"></i>
@@ -558,10 +558,10 @@
                         <div class="footer-middle-item-wrapper">
                             <div class="footer-middle-item-3 mb-lg-0">
                                 <div class="fm-item-title">
-                                    <h4>Our Newsletter</h4>
+                                    <h4>Suscríbete a nuestro boletín</h4>
                                 </div>
                                 <div class="fm-item-content">
-                                    <p>Casina esports organization supported by community leaders</p>
+                                    <p>La organización de eSports Atlantic city cuenta con el apoyo de líderes comunitarios</p>
                                     <form>
                                         <div class="form-group mb-4">
                                             <input type="text" class="form-control" placeholder="Your Name">
@@ -569,7 +569,7 @@
                                         <div class="form-group mb-2">
                                             <input type="email" class="form-control" placeholder="Your Email">
                                         </div>
-										<button type="submit" class="default-button"><span>Send Massage <i class="icofont-circled-right"></i></span></button>
+										<button type="submit" class="default-button"><span> Enviar Mensaje <i class="icofont-circled-right"></i></span></button>
                                     </form>
                                 </div>
                             </div>
@@ -583,7 +583,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="footer-bottom-content text-center">
-                            <p>&copy;2022 <a href="index-2.html">Casina</a> - All Rights Reserved. Developed by <a href="https://themeforest.net/user/codexcoder">CodexCoder</a></p>
+                            <p>&copy;2025 <a href="index-2.html">Atlantic city</a> - Todos los derechos reservados. Desarrollado por <a href="https://github.com/skies120/pf-casino">Grupo de Lunes</a></p>
                         </div>
                     </div>
                 </div>
