Terminando de Editar: Illescas Flores

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 											<img src="assets/images/jaqport/country/01.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -314,7 +314,7 @@
 											<img src="assets/images/jaqport/country/02.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -325,7 +325,7 @@
 											<img src="assets/images/jaqport/country/03.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -336,7 +336,7 @@
 											<img src="assets/images/jaqport/country/04.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -347,7 +347,7 @@
 											<img src="assets/images/jaqport/country/05.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -358,7 +358,7 @@
 											<img src="assets/images/jaqport/country/06.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -369,7 +369,7 @@
 											<img src="assets/images/jaqport/country/07.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -380,7 +380,7 @@
 											<img src="assets/images/jaqport/country/08.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -391,7 +391,7 @@
 											<img src="assets/images/jaqport/country/09.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -402,7 +402,7 @@
 											<img src="assets/images/jaqport/country/10.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -413,7 +413,7 @@
 											<img src="assets/images/jaqport/country/11.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -424,7 +424,7 @@
 											<img src="assets/images/jaqport/country/12.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 								</ul>
@@ -471,8 +471,8 @@
 														<img src="assets/images/jaqport/01.jpg" alt="game-img" class="rounded-3 w-100">
 													</div>
 													<div class="game__overlay">
-														<h4>poker games</h4>
-														<p>$1,23,002</p>
+														<h4>JUEGOS DE POKER</h4>
+														<p>S/1,23,002</p>
 														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
@@ -485,8 +485,8 @@
 														<img src="assets/images/jaqport/02.jpg" alt="game-img" class="rounded-3 w-100">
 													</div>
 													<div class="game__overlay">
-														<h4>poker games</h4>
-														<p>$1,23,002</p>
+														<h4>JUEGOS DE POKER</h4>
+														<p>S/1,23,002</p>
 														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
@@ -499,8 +499,8 @@
 														<img src="assets/images/jaqport/03.jpg" alt="game-img" class="rounded-3 w-100">
 													</div>
 													<div class="game__overlay">
-														<h4>poker games</h4>
-														<p>$1,23,002</p>
+														<h4>JUEGOS DE POKER</h4>
+														<p>S/1,23,002</p>
 														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
@@ -527,8 +527,8 @@
 														<img src="assets/images/jaqport/04.jpg" alt="game-img" class="rounded-3 w-100">
 													</div>
 													<div class="game__overlay">
-														<h4>poker games</h4>
-														<p>$1,23,002</p>
+														<h4>JUEGOS DE POKER</h4>
+														<p>S/1,23,002</p>
 														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
@@ -541,8 +541,8 @@
 														<img src="assets/images/jaqport/05.jpg" alt="game-img" class="rounded-3 w-100">
 													</div>
 													<div class="game__overlay">
-														<h4>poker games</h4>
-														<p>$1,23,002</p>
+														<h4>JUEGOS DE POKER</h4>
+														<p>S/1,23,002</p>
 														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
@@ -555,8 +555,8 @@
 														<img src="assets/images/jaqport/06.jpg" alt="game-img" class="rounded-3 w-100">
 													</div>
 													<div class="game__overlay">
-														<h4>poker games</h4>
-														<p>$1,23,002</p>
+														<h4>JUEGOS DE POKER</h4>
+														<p>S/1,23,002</p>
 														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
@@ -664,8 +664,8 @@
 							</div>
 							<div class="game__overlay">
 								<div class="game__overlay-left">
-									<h4>free poker games</h4>
-									<p>Catagory: Roulette</p>
+									<h4>JUEGOS GRATIS DE POKER</h4>
+									<p>Categoria: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
 									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
@@ -682,8 +682,8 @@
 							</div>
 							<div class="game__overlay">
 								<div class="game__overlay-left">
-									<h4>free poker games</h4>
-									<p>Catagory: Roulette</p>
+									<h4>JUEGOS GRATIS DE POKER</h4>
+									<p>Categoria: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
 									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
@@ -700,8 +700,8 @@
 							</div>
 							<div class="game__overlay">
 								<div class="game__overlay-left">
-									<h4>free poker games</h4>
-									<p>Catagory: Roulette</p>
+									<h4>JUEGOS GRATIS DE POKER</h4>
+									<p>Categoria: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
 									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
@@ -718,8 +718,8 @@
 							</div>
 							<div class="game__overlay">
 								<div class="game__overlay-left">
-									<h4>free poker games</h4>
-									<p>Catagory: Roulette</p>
+									<h4>JUEGOS GRATIS DE POKER</h4>
+									<p>Categoria: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
 									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
