--- a/game-list2.html
+++ b/game-list2.html
@@ -174,11 +174,11 @@
 	<section class="pageheader-section" style="background-image: url(assets/images/pageheader/bg.jpg);">
 		<div class="container">
             <div class="section-wrapper text-center text-uppercase">
-                <h2 class="pageheader-title">most popular game</h2>
+                <h2 class="pageheader-title">Juego mas Popular</h2>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb justify-content-center mb-0">
-                      <li class="breadcrumb-item"><a href="index-2.html">Home</a></li>
-                      <li class="breadcrumb-item active" aria-current="page">matche</li>
+                      <li class="breadcrumb-item"><a href="index-2.html">Casa</a></li>
+                      <li class="breadcrumb-item active" aria-current="page">Partido</li>
                     </ol>
                 </nav>
             </div>
@@ -189,14 +189,14 @@
 
 
 	<!-- ===========Inicio de la sección de calendario de partidos aquí========== -->
-	<section class="match-section padding-top padding-bottom">
+	<section class="collection-section padding-top padding-bottom">
 		<div class="container">
 			<div class="section-wrapper">
-                <ul class="match-filter-button-group common-filter-button-group d-flex flex-wrap justify-content-center mb-5 text-uppercase">  
-                    <li class="is-checked" data-filter="*">All matches</li>
-                    <li data-filter=".match-one">today’s matches</li>
-                    <li data-filter=".match-two">upcoming matches</li>
-                    <li data-filter=".match-three">matche results</li>
+                <ul class="collection-filter-button-group common-filter-button-group d-flex flex-wrap justify-content-center mb-5 text-uppercase">  
+                    <li class="is-checked" data-filter="*">Todos los partidos</li>
+                    <li data-filter=".collection-one">Partidos de hoy</li>
+                    <li data-filter=".collection-two">Próximos partidos"</li>
+                    <li data-filter=".collection-three">Resultados de los partidos</li>
                 </ul>
 				<div class="row g-4 match-grid grid">
                     <div class="col-lg-6 col-12 matchlistitem match-one">
@@ -207,8 +207,8 @@
 								</div>
 								<div class="game__overlay">
 									<div class="game__overlay-left">
-										<h4>free poker games</h4>
-										<p>Catagory: Roulette</p>
+										<h4>Juego Gratis de Poker</h4>
+										<p>Categoria: Roulette</p>
 									</div>
 									<div class="game__overlay-right">
 										<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
@@ -225,8 +225,8 @@
 								</div>
 								<div class="game__overlay">
 									<div class="game__overlay-left">
-										<h4>free poker games</h4>
-										<p>Catagory: Roulette</p>
+										<h4>Juego Gratis de Poker</h4>
+										<p>Categoria: Roulette</p>
 									</div>
 									<div class="game__overlay-right">
 										<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
@@ -243,8 +243,8 @@
 								</div>
 								<div class="game__overlay">
 									<div class="game__overlay-left">
-										<h4>free poker games</h4>
-										<p>Catagory: Roulette</p>
+										<h4>Juego Gratis de Poker</h4>
+										<p>Categoria: Roulette</p>
 									</div>
 									<div class="game__overlay-right">
 										<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
@@ -261,8 +261,8 @@
 								</div>
 								<div class="game__overlay">
 									<div class="game__overlay-left">
-										<h4>free poker games</h4>
-										<p>Catagory: Roulette</p>
+										<h4>Juego Gratis de Poker</h4>
+										<p>Categoria: Roulette</p>
 									</div>
 									<div class="game__overlay-right">
 										<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
@@ -279,8 +279,8 @@
 								</div>
 								<div class="game__overlay">
 									<div class="game__overlay-left">
-										<h4>free poker games</h4>
-										<p>Catagory: Roulette</p>
+										<h4>Juego Gratis de Poker</h4>
+										<p>Categoria: Roulette</p>
 									</div>
 									<div class="game__overlay-right">
 										<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
@@ -297,8 +297,8 @@
 								</div>
 								<div class="game__overlay">
 									<div class="game__overlay-left">
-										<h4>free poker games</h4>
-										<p>Catagory: Roulette</p>
+										<h4>Juego Gratis de Poker</h4>
+										<p>Categoria: Roulette</p>
 									</div>
 									<div class="game__overlay-right">
 										<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
@@ -315,8 +315,8 @@
 								</div>
 								<div class="game__overlay">
 									<div class="game__overlay-left">
-										<h4>free poker games</h4>
-										<p>Catagory: Roulette</p>
+										<h4>Juego Gratis de Poker</h4>
+										<p>Categoria: Roulette</p>
 									</div>
 									<div class="game__overlay-right">
 										<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
@@ -333,8 +333,8 @@
 								</div>
 								<div class="game__overlay">
 									<div class="game__overlay-left">
-										<h4>free poker games</h4>
-										<p>Catagory: Roulette</p>
+										<h4>Juego Gratis de Poker</h4>
+										<p>Categoria: Roulette</p>
 									</div>
 									<div class="game__overlay-right">
 										<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
@@ -351,8 +351,8 @@
 								</div>
 								<div class="game__overlay">
 									<div class="game__overlay-left">
-										<h4>free poker games</h4>
-										<p>Catagory: Roulette</p>
+										<h4>Juego Gratis de Poker</h4>
+										<p>Categoria: Roulette</p>
 									</div>
 									<div class="game__overlay-right">
 										<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
@@ -369,8 +369,8 @@
 								</div>
 								<div class="game__overlay">
 									<div class="game__overlay-left">
-										<h4>free poker games</h4>
-										<p>Catagory: Roulette</p>
+										<h4>Juego Gratis de Poker</h4>
+										<p>Categoria: Roulette</p>
 									</div>
 									<div class="game__overlay-right">
 										<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
@@ -399,7 +399,7 @@
                                     <img src="assets/images/footer/icons/01.png" alt="Phone-icon">
                                 </div>
                                 <div class="lab-content">
-                                    <span>Phone Number : +88012 345 678 912</span>
+                                    <span>Numero Celular : (01) 705-4440</span>
                                 </div>
                             </div>
                         </div>
@@ -411,7 +411,7 @@
                                     <img src="assets/images/footer/icons/02.png" alt="email-icon">
                                 </div>
                                 <div class="lab-content">
-                                    <span>Email : youremail@gmail.com</span>
+                                    <span>Correo : contacto@casinoatlanticcity.com</span>
                                 </div>
                             </div>
                         </div>
@@ -423,7 +423,7 @@
                                     <img src="assets/images/footer/icons/03.png" alt="location-icon">
                                 </div>
                                 <div class="lab-content">
-                                    <span>Address : 30 North West New York</span>
+                                    <span>Dirección : Av. Alfredo Benavides 430, Miraflores 15074</span>
                                 </div>
                             </div>
                         </div>
@@ -441,7 +441,7 @@
                                     <img src="assets/images/logo/atlant.png" alt="logo">
                                 </div>
                                 <div class="fm-item-content">
-                                    <p class="mb-4">Upropriate brand economca sound technolog after covalent technology enable prospective wastng markets whereas propriate and brand economca sound technolog</p>
+                                    <p class="mb-4">Aplicamos tecnologías sólidas y rentables para la marca tras integrar tecnología avanzada, lo que permite acceder a mercados emergentes, manteniendo siempre una marca y tecnología económicamente sólidas.</p>
 									<ul class="match-social-list d-flex flex-wrap align-items-center">
 										<li><a href="#"><img src="assets/images/match/social-1.png" alt="vimeo"></a></li>
 										<li><a href="#"><img src="assets/images/match/social-2.png" alt="youtube"></a></li>
@@ -455,7 +455,7 @@
                         <div class="footer-middle-item-wrapper">
                             <div class="footer-middle-item mb-lg-0">
                                 <div class="fm-item-title">
-                                    <h4>Top jackpot games</h4>
+                                    <h4>Juegos destacados de jackpot</h4>
                                 </div>
                                 <div class="fm-item-content">
                                     <div class="fm-item-widget lab-item">
@@ -464,8 +464,8 @@
                                                 <a href="#"> <img src="assets/images/footer/01.jpg" alt="footer-widget-img" class="rounded-3"></a>
                                             </div>
                                             <div class="lab-content">
-                                                <a href="blog-single.html"><h6>free Poker Game</h6></a>
-                                                <p>Poker: <b>$230</b></p>
+                                                <a href="blog-single.html"><h6>Juego de Poker Gratis</h6></a>
+                                                <p>Poker: <b>S/230.00</b></p>
 												<div class="rating">
 													<i class="icofont-ui-rating"></i>
 													<i class="icofont-ui-rating"></i>
@@ -482,8 +482,8 @@
                                                 <a href="#"><img src="assets/images/footer/02.jpg" alt="footer-widget-img" class="rounded-3"></a>
                                             </div>
                                             <div class="lab-content">
-                                                <a href="blog-single.html"><h6>CLUB Poker Game</h6></a>
-                                                <p>Poker: <b>$290</b></p>
+                                                <a href="blog-single.html"><h6>Partida de Póker del Club</h6></a>
+                                                <p>Poker: <b>S/290.00</b></p>
 												<div class="rating">
 													<i class="icofont-ui-rating"></i>
 													<i class="icofont-ui-rating"></i>
@@ -500,8 +500,8 @@
                                                 <a href="#"><img src="assets/images/footer/03.jpg" alt="footer-widget-img" class="rounded-3"></a>
                                             </div>
                                             <div class="lab-content">
-                                                <a href="blog-single.html"><h6>ROYAL Poker Game</h6></a>
-                                                <p>Poker: <b>$330</b></p>
+                                                <a href="blog-single.html"><h6>"Partida de Póker Real</h6></a>
+                                                <p>Poker: <b>S/330.00</b></p>
 												<div class="rating">
 													<i class="icofont-ui-rating"></i>
 													<i class="icofont-ui-rating"></i>
@@ -520,10 +520,10 @@
                         <div class="footer-middle-item-wrapper">
                             <div class="footer-middle-item-3 mb-lg-0">
                                 <div class="fm-item-title">
-                                    <h4>Our Newsletter</h4>
+                                    <h4>Suscríbete a nuestro boletín</h4>
                                 </div>
                                 <div class="fm-item-content">
-                                    <p>Casina esports organization supported by community leaders</p>
+                                    <p>La organización de eSports Atlantic city cuenta con el apoyo de líderes comunitarios</p>
                                     <form>
                                         <div class="form-group mb-4">
                                             <input type="text" class="form-control" placeholder="Your Name">
@@ -531,7 +531,7 @@
                                         <div class="form-group mb-2">
                                             <input type="email" class="form-control" placeholder="Your Email">
                                         </div>
-										<button type="submit" class="default-button"><span>Send Massage <i class="icofont-circled-right"></i></span></button>
+										<button type="submit" class="default-button"><span> Enviar Mensaje <i class="icofont-circled-right"></i></span></button>
                                     </form>
                                 </div>
                             </div>
@@ -545,7 +545,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="footer-bottom-content text-center">
-                            <p>&copy;2022 <a href="index-2.html">Casina</a> - All Rights Reserved. Developed by <a href="https://themeforest.net/user/codexcoder">CodexCoder</a></p>
+                            <p>&copy;2025 <a href="index-2.html">Atlantic city</a> - Todos los derechos reservados. Desarrollado por <a href="https://github.com/skies120/pf-casino">Grupo de Lunes</a></p>
                         </div>
                     </div>
                 </div>
