--- a/index-3.html
+++ b/index-3.html
@@ -377,8 +377,8 @@
 							</div>
 							<div class="game__overlay">
 								<div class="game__overlay-left">
-									<h4>free poker games</h4>
-									<p>Catagory: Roulette</p>
+									<h4>JUEGOS GRATIS DE POKER</h4>
+									<p>Categoria: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
 									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
@@ -395,8 +395,8 @@
 							</div>
 							<div class="game__overlay">
 								<div class="game__overlay-left">
-									<h4>free poker games</h4>
-									<p>Catagory: Roulette</p>
+									<h4>JUEGOS GRATIS DE POKER</h4>
+									<p>Categoria: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
 									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
@@ -413,8 +413,8 @@
 							</div>
 							<div class="game__overlay">
 								<div class="game__overlay-left">
-									<h4>free poker games</h4>
-									<p>Catagory: Roulette</p>
+									<h4>JUEGOS GRATIS DE POKER</h4>
+									<p>Categoria: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
 									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
@@ -431,8 +431,8 @@
 							</div>
 							<div class="game__overlay">
 								<div class="game__overlay-left">
-									<h4>free poker games</h4>
-									<p>Catagory: Roulette</p>
+									<h4>JUEGOS GRATIS DE POKER</h4>
+									<p>Categoria: Roulette</p>
 								</div>
 								<div class="game__overlay-right">
 									<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
@@ -506,7 +506,7 @@
 											<img src="assets/images/jaqport/country/11.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -517,7 +517,7 @@
 											<img src="assets/images/jaqport/country/12.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -528,7 +528,7 @@
 											<img src="assets/images/jaqport/country/03.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -539,7 +539,7 @@
 											<img src="assets/images/jaqport/country/04.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -550,7 +550,7 @@
 											<img src="assets/images/jaqport/country/05.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -561,7 +561,7 @@
 											<img src="assets/images/jaqport/country/06.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -572,7 +572,7 @@
 											<img src="assets/images/jaqport/country/07.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -583,7 +583,7 @@
 											<img src="assets/images/jaqport/country/08.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -594,7 +594,7 @@
 											<img src="assets/images/jaqport/country/09.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -605,7 +605,7 @@
 											<img src="assets/images/jaqport/country/10.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 								</ul>
@@ -652,8 +652,8 @@
 														<img src="assets/images/jaqport/01.jpg" alt="game-img" class="rounded-3 w-100">
 													</div>
 													<div class="game__overlay">
-														<h4>poker games</h4>
-														<p>$1,23,002</p>
+														<h4>JUEGOS DE POKER</h4>
+														<p>S/1,23,002</p>
 														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
@@ -666,8 +666,8 @@
 														<img src="assets/images/jaqport/02.jpg" alt="game-img" class="rounded-3 w-100">
 													</div>
 													<div class="game__overlay">
-														<h4>poker games</h4>
-														<p>$1,23,002</p>
+														<h4>JUEGOS DE POKER</h4>
+														<p>S/1,23,002</p>
 														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
@@ -680,8 +680,8 @@
 														<img src="assets/images/jaqport/03.jpg" alt="game-img" class="rounded-3 w-100">
 													</div>
 													<div class="game__overlay">
-														<h4>poker games</h4>
-														<p>$1,23,002</p>
+														<h4>JUEGOS DE POKER</h4>
+														<p>S/1,23,002</p>
 														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
@@ -694,8 +694,8 @@
 														<img src="assets/images/jaqport/04.jpg" alt="game-img" class="rounded-3 w-100">
 													</div>
 													<div class="game__overlay">
-														<h4>poker games</h4>
-														<p>$1,23,002</p>
+														<h4>JUEGOS DE POKER</h4>
+														<p>S/1,23,002</p>
 														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
@@ -708,8 +708,8 @@
 														<img src="assets/images/jaqport/05.jpg" alt="game-img" class="rounded-3 w-100">
 													</div>
 													<div class="game__overlay">
-														<h4>poker games</h4>
-														<p>$1,23,002</p>
+														<h4>JUEGOS DE POKER</h4>
+														<p>S/1,23,002</p>
 														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
@@ -722,8 +722,8 @@
 														<img src="assets/images/jaqport/06.jpg" alt="game-img" class="rounded-3 w-100">
 													</div>
 													<div class="game__overlay">
-														<h4>poker games</h4>
-														<p>$1,23,002</p>
+														<h4>JUEGOS DE POKER</h4>
+														<p>S/1,23,002</p>
 														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
