--- a/jaqpot.html
+++ b/jaqpot.html
@@ -220,7 +220,7 @@
 											<img src="assets/images/jaqport/country/01.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -231,7 +231,7 @@
 											<img src="assets/images/jaqport/country/02.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -242,7 +242,7 @@
 											<img src="assets/images/jaqport/country/03.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -253,7 +253,7 @@
 											<img src="assets/images/jaqport/country/04.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -264,7 +264,7 @@
 											<img src="assets/images/jaqport/country/05.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -275,7 +275,7 @@
 											<img src="assets/images/jaqport/country/06.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -286,7 +286,7 @@
 											<img src="assets/images/jaqport/country/07.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -297,7 +297,7 @@
 											<img src="assets/images/jaqport/country/08.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -308,7 +308,7 @@
 											<img src="assets/images/jaqport/country/09.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -319,7 +319,7 @@
 											<img src="assets/images/jaqport/country/10.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -330,7 +330,7 @@
 											<img src="assets/images/jaqport/country/11.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 									<li class="jaqport__gamelist">
@@ -341,7 +341,7 @@
 											<img src="assets/images/jaqport/country/12.jpg" alt="jaqport-thumb" class="rounded-circle">
 										</div>
 										<div class="jaqport__gamelist-right">
-											<h6>$2365.96</h6>
+											<h6>S/2365.96</h6>
 										</div>
 									</li>
 								</ul>
@@ -388,8 +388,8 @@
 														<img src="assets/images/jaqport/01.jpg" alt="game-img" class="rounded-3 w-100">
 													</div>
 													<div class="game__overlay">
-														<h4>poker games</h4>
-														<p>$1,23,002</p>
+														<h4>JUEGOS DE POKER</h4>
+														<p>S/1,23,002</p>
 														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
@@ -402,8 +402,8 @@
 														<img src="assets/images/jaqport/02.jpg" alt="game-img" class="rounded-3 w-100">
 													</div>
 													<div class="game__overlay">
-														<h4>poker games</h4>
-														<p>$1,23,002</p>
+														<h4>JUEGOS DE POKER</h4>
+														<p>S/1,23,002</p>
 														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
@@ -416,8 +416,8 @@
 														<img src="assets/images/jaqport/03.jpg" alt="game-img" class="rounded-3 w-100">
 													</div>
 													<div class="game__overlay">
-														<h4>poker games</h4>
-														<p>$1,23,002</p>
+														<h4>JUEGOS DE POKER</h4>
+														<p>S/1,23,002</p>
 														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
@@ -444,8 +444,8 @@
 														<img src="assets/images/jaqport/04.jpg" alt="game-img" class="rounded-3 w-100">
 													</div>
 													<div class="game__overlay">
-														<h4>poker games</h4>
-														<p>$1,23,002</p>
+														<h4>JUEGOS DE POKER</h4>
+														<p>S/1,23,002</p>
 														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
@@ -458,8 +458,8 @@
 														<img src="assets/images/jaqport/05.jpg" alt="game-img" class="rounded-3 w-100">
 													</div>
 													<div class="game__overlay">
-														<h4>poker games</h4>
-														<p>$1,23,002</p>
+														<h4>JUEGOS DE POKER</h4>
+														<p>S/1,23,002</p>
 														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
@@ -472,8 +472,8 @@
 														<img src="assets/images/jaqport/06.jpg" alt="game-img" class="rounded-3 w-100">
 													</div>
 													<div class="game__overlay">
-														<h4>poker games</h4>
-														<p>$1,23,002</p>
+														<h4>JUEGOS DE POKER</h4>
+														<p>S/1,23,002</p>
 														<a href="#" class="default-button"><span> Juegue Ahora <i class="icofont-circled-right"></i></span> </a>
 													</div>
 												</div>
