Terminando de Editar: Illescas Flores

--- a/index.html
+++ b/index.html
@@ -880,7 +880,7 @@
 													</div>
 													<div class="name-des">
 														<h5>Madley Pondor</h5>
-														<p>UI Designer</p>
+														<p>Diseñador UI</p>
 													</div>
 												</div>
 												<div class="testimonial-footer">
@@ -908,7 +908,7 @@
 													</div>
 													<div class="name-des">
 														<h5>Oliver Beddows</h5>
-														<p>UI Designer</p>
+														<p>Diseñador UI</p>
 													</div>
 												</div>
 												<div class="testimonial-footer">
